# claude-proxy-bridge

./: .env.example  .gitignore  README.md  TELEGRAM_SETUP.md  install.py  pyproject.toml  setup.py  start.py
configs/: bridge.example.yaml  nanoclaw_skill.md  openclaw_provider.json5
scripts/: health_check.py  setup.bat  setup.sh
src/: claude_runner.py  config.py  http_runner.py  openai_types.py  proxy_server.py  router.py  runners.py  ws_bridge.py
